--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -53,6 +53,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Go 1.21
+      uses: actions/setup-go@v4
+      with:
+        go-version: '^1.21'
+
     - name: Generate matrix
       id: set-matrix
       run: |
@@ -73,12 +78,12 @@ jobs:
 
     steps:
       - name: Set up Go 1.21
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: '^1.21'
               
       - name: checkout chain
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Download Tarball Artifact
         uses: actions/download-artifact@v3
