--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -27,6 +27,15 @@ jobs:
           chain: noble
           dockerfile: cosmos
           build-target: make install
+          build-env: |
+            - GOPRIVATE=github.com/circlefin/noble-cctp
+          pre-build: |
+            mkdir -p ~/.ssh
+            echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
+            chmod 600 ~/.ssh/id_ed25519
+            apk add openssh
+            git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
           binaries: |
             - /go/bin/nobled
 
@@ -36,23 +45,63 @@ jobs:
           name: noble-docker-image
           path: ${{ env.TAR_PATH }}
 
+  prepare-e2e-tests:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go 1.21
+      uses: actions/setup-go@v4
+      with:
+        go-version: '^1.21'
+
+    - name: CCTP private repo auth
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        export GOPRIVATE=github.com/circlefin/noble-cctp
+        git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+
+    - name: Generate matrix
+      id: set-matrix
+      run: |
+        # Run the command and convert its output to a JSON array
+        TESTS=$(cd interchaintest && go test -list . | grep -v "^ok " | jq -R -s -c 'split("\n")[:-1]')
+        echo "matrix=${TESTS}" >> $GITHUB_OUTPUT
+  
   e2e-tests:
-    needs: build-docker
+    needs: 
+      - build-docker
+      - prepare-e2e-tests
     runs-on: ubuntu-latest
     strategy:
         matrix:
             # names of `make` commands to run tests
-            test: ["ictest-tkn-factory", "ictest-packet-forward", "ictest-paramauthority", "ictest-chain-upgrade-noble-1", "ictest-chain-upgrade-grand-1", "ictest-globalFee", "ictest-ics20-bps-fees", "ictest-client-substitution"]
+          test: ${{fromJson(needs.prepare-e2e-tests.outputs.matrix)}}
         fail-fast: false
 
     steps:
-      - name: Set up Go 1.19
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.21
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: '^1.21'
               
       - name: checkout chain
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: CCTP private repo auth
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          export GOPRIVATE=github.com/circlefin/noble-cctp
+          git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
 
       - name: Download Tarball Artifact
         uses: actions/download-artifact@v3
@@ -63,4 +112,4 @@ jobs:
         run: docker image load -i ${{ env.TAR_PATH }}
 
       - name: run test
-        run: make ${{ matrix.test }}
+        run: cd interchaintest && go test -race -v -timeout 30m -run ^${{ matrix.test }}$ .
