chore: temporarily replace cctp dependency

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -22,7 +22,7 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           export GOPRIVATE=github.com/circlefin/noble-cctp
-          git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+          git config --global --add url."git@github.com:circlefin/noble-cctp-private.git".insteadOf "https://github.com/circlefin/noble-cctp-private"
 
       - name: Run Unit Tests
         run: go test -v ./...
