--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -40,7 +40,7 @@ jobs:
             echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
             chmod 600 ~/.ssh/id_ed25519
             apk add openssh
-            git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+            git config --global --add url."git@github.com:circlefin/noble-cctp-private.git".insteadOf "https://github.com/circlefin/noble-cctp-private"
             ssh-keyscan github.com >> ~/.ssh/known_hosts
           binaries: |
             - /go/bin/nobled
