--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -34,7 +34,7 @@ jobs:
             echo "${{ secrets.GITAUTH }}" | base64 -d > ~/.ssh/id_ed25519
             chmod 600 ~/.ssh/id_ed25519
             apk add openssh
-            git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+            git config --global --add url."git@github.com:circlefin/noble-cctp-private.git".insteadOf "https://github.com/circlefin/noble-cctp-private"
             ssh-keyscan github.com >> ~/.ssh/known_hosts
           binaries: |
             - /go/bin/nobled
@@ -65,7 +65,7 @@ jobs:
         chmod 600 ~/.ssh/id_ed25519
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         export GOPRIVATE=github.com/circlefin/noble-cctp
-        git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+        git config --global --add url."git@github.com:circlefin/noble-cctp-private.git".insteadOf "https://github.com/circlefin/noble-cctp-private"
 
     - name: Generate matrix
       id: set-matrix
@@ -101,7 +101,7 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           export GOPRIVATE=github.com/circlefin/noble-cctp
-          git config --global --add url."git@github.com:circlefin/noble-cctp.git".insteadOf "https://github.com/circlefin/noble-cctp"
+          git config --global --add url."git@github.com:circlefin/noble-cctp-private.git".insteadOf "https://github.com/circlefin/noble-cctp-private"
 
       - name: Download Tarball Artifact
         uses: actions/download-artifact@v3
