--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build Docker image
-        uses: strangelove-ventures/heighliner-build-action@v0.0.3
+        uses: strangelove-ventures/heighliner-build-action@v1.0.1
         with:
           registry: "" # empty registry, image only shared for e2e testing
           tag: local # emulate local environment for consistency in e2e cases
@@ -31,7 +31,7 @@ jobs:
             - /go/bin/nobled
 
       - name: Publish Tarball as Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: noble-docker-image
           path: ${{ env.TAR_PATH }}
@@ -45,9 +45,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go 1.21
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '^1.21'
+          go-version: '>=1.21'
 
       - name: Generate matrix
         id: set-matrix
@@ -69,15 +69,15 @@ jobs:
 
     steps:
       - name: Set up Go 1.21
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '^1.21'
+          go-version: '>=1.21'
 
       - name: checkout chain
         uses: actions/checkout@v4
 
       - name: Download Tarball Artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: noble-docker-image
 
