--- a/app/app.yaml
+++ b/app/app.yaml
@@ -98,4 +98,5 @@ modules:
   - name: forwarding
     config:
       "@type": noble.forwarding.module.v1.Module
+      authority: authority # Utilize our custom x/authority module.
   # TODO(@john): TokenFactory
