--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go 1.21
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: '>=1.22'
@@ -68,7 +68,7 @@ jobs:
       fail-fast: false
 
     steps:
-      - name: Set up Go 1.21
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: '>=1.22'
