--- a/.github/workflows/simulation-tests.yaml
+++ b/.github/workflows/simulation-tests.yaml
@@ -8,12 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: '>=1.22'
 
       - name: Run Unit Tests
         run: go test -bench BenchmarkSimulation ./app
